Added loading spinner to login