@@ -113,6 +113,8 @@
                                 <option>--add-exports</option>
                                 <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                                 <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
+                                <option>--add-exports</option>
                                 <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                             </options>
                             <mainClass>com.redheads.arla.App</mainClass>
